--- a/style.css
+++ b/style.css
@@ -75,6 +75,11 @@ header {
   margin-right: 8px;
 }
 
+.search-dot-2 {
+  position: absolute;
+  left: 16px;
+}
+
 /*_________________________________HERO SECTION_________________________________*/
 
 .hero-section {
@@ -386,7 +391,6 @@ a.sign-up-to-ride {
   line-height: 18px;
   font-weight: 700;
   font-size: 13px;
-  font-family: sans-serif;
   padding-left: 8px;
 }
 .get-a-reliable-ride-content:hover {
@@ -610,26 +614,26 @@ a.sign-up-to-ride {
 .location-label {
   position: absolute;
   pointer-events: none;
-  transform-origin: 40px 0px;
-  padding-left: 24px;
+  transform-origin: 0px 0px;
   transition: transform 100ms cubic-bezier(0.45, 0, 0.15, 1) 0s;
   color: grey;
   font-size: 16px;
-  padding: 24px;
+  margin-left: 42px;
 }
 
 input:valid ~ .location-label,
 input:focus ~ .location-label {
-  transform: scale(0.9) translateY(-8px);
+  transform: scale(0.9) translateY(-10px);
   margin-bottom: 2px;
 }
 
 .input-style {
   outline: none;
   min-width: 80px;
-  height: 100%;
-  transform: translateY(10px);
   font-size: 18px;
+  width: 100%;
+  height: 60px;
+  padding: 16px 40px 0px;
 }
 
 .ride-section3-searchbox {
@@ -638,7 +642,7 @@ input:focus ~ .location-label {
   align-items: center;
   background-color: white;
   border-radius: 5px;
-  padding: 16px 16px 16px 14px;
+  overflow: hidden;
 }
 
 .ride-section3-get-estimate {
@@ -709,6 +713,9 @@ input:focus ~ .location-label {
   font-weight: 700;
   font-size: 14px;
 }
+.community-guidlines:hover {
+  text-decoration: underline;
+}
 
 .safety-first-section3 {
   width: 8.3333%;
@@ -721,7 +728,74 @@ input:focus ~ .location-label {
   width: 33.3333%;
 }
 
+.getting-the-vaccine {
+  font-size: 36px;
+  line-height: 44px;
+  font-weight: 600;
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
 /*_________________________________VACCINE ACCESS SECTION_________________________________*/
+
+.vaccine-access-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-top: 80px;
+  margin-bottom: 80px;
+  text-align: left;
+  padding-left: 16px;
+  padding-right: 8px;
+}
+
+.vaccine-access-section1 {
+  width: 8.3333%;
+}
+
+.vaccine-access-section2 {
+  width: 33.333%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.vaccine-access-img {
+  border-top-left-radius: 140px;
+  width: 100%;
+  height: auto;
+}
+
+.vaccine-access-section3 {
+  width: 8.3333%;
+}
+
+.vaccine-access-section4 {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  text-align: left;
+}
+
+.vaccine-access-header {
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 700;
+}
+
+.learn-more-about-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-top: 28px;
+}
+
+.learn-more-about-vaccine-access {
+  font-weight: 700;
+  font-size: 14px;
+}
+.learn-more-about-vaccine-access:hover {
+  text-decoration: underline;
+}
 
 /*_________________________________LYFT BUSINESS SECTION_________________________________*/
 
