--- a/style.css
+++ b/style.css
@@ -634,6 +634,8 @@ input:focus ~ .location-label {
   width: 100%;
   height: 60px;
   padding: 16px 26px 0px;
+  margin-left: 16px;
+  margin-right: -16px;
 }
 
 .ride-section3-searchbox {
