--- a/style.css
+++ b/style.css
@@ -200,6 +200,7 @@ a.sign-up-to-ride {
   border-top-right-radius: 140px;
   width: 100%;
   height: auto;
+  padding-top: 20px;
 }
 
 .driver-section-info {
@@ -228,6 +229,16 @@ a.sign-up-to-ride {
 
 .reason-to-drive {
   margin-bottom: 24px;
+}
+
+.driver-pay-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  font-size: 14px;
+  line-height: 18px;
+  margin-right: 8px;
+  margin-left: 24px;
 }
 
 /*_________________________________DRIVER REVIEW SECTION_________________________________*/
