--- a/style.css
+++ b/style.css
@@ -906,6 +906,71 @@ input:focus ~ .location-label {
 
 /* rolling text */
 
+.slider {
+  text-align: center;
+  position: relative;
+}
+
+.text-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  height: 1.2em;
+  overflow: hidden;
+  margin-bottom: 10px;
+}
+
+.text-box span {
+  transform: translateY(-50%);
+  opacity: 0;
+  position: absolute;
+  animation-duration: 6s;
+  animation-direction: normal;
+  animation-fill-mode: forwards;
+  animation-iteration-count: infinite;
+
+  animation-name: rollDown;
+}
+
+.text-box span:nth-child(1) {
+  animation-delay: 0s;
+}
+
+.text-box span:nth-child(2) {
+  animation-delay: 2s;
+}
+
+.text-box span:nth-child(3) {
+  animation-delay: 4s;
+}
+
+@keyframes rollDown {
+  0% {
+    transform: translateY(-30%);
+
+    opacity: 0;
+  }
+  5% {
+    top: 0px;
+    transform: translateY(0%);
+
+    opacity: 1;
+  }
+  28% {
+    top: 0px;
+    transform: translateY(0%);
+
+    opacity: 1;
+  }
+  33% {
+    transform: translateY(30%);
+
+    opacity: 0;
+  }
+}
+
 /*_________________________________FOOTER_________________________________*/
 
 .sitemap-li {
